(Format: Year/Month/Day)
Changes for 0.9.13
*05/04/26:
  * Fix systray icon sizing (send a configurenotify on resize) (Simon)
    SystemTray.cc WinClient.hh/cc FbTk/FbWindow.hh/cc Window.cc
  * Extension of previous patch, pushing various bits of menu items and
    text buttons onto the background, and fixing various issues (Simon) 
    + Incidentally, adds some new theme items (due to backwards 
      compatibility fix):
      - menu.hilite.submenu.pixmap:    <Pixmap>
      - menu.hilite.selected.pixmap:   <Pixmap>
      - menu.hilite.unselected.pixmap: <Pixmap>
    These are equivalent to the no-.hilite ones, except are shown
    when the item is highlighted...
    FbTk/...
      Menu.hh/cc MenuItem.hh/cc MenuTheme.hh/cc TextButton.hh/cc 
      FbWindow.hh/cc MenuIcon.hh/cc
    FbWinFrame.hh/cc IconButton.hh/cc ToggleMenu.hh Window.cc    
*05/04/25:
  * Fixed #1188690, fbrun segfault (Mathias)
    FbTk/App.cc
*05/04/23:
  * Close of #956325 (Mathias)
       WorkspaceMenu -> left click on a item will jump TO that
                        workspace
                     -> middle click will fetch it to the current
                        workspac
       SendToMenu    -> left click send it quietly
                     -> middle click send it and follows to that
                        workspace
    This should now match whats written in the manpage.
    Workspace.cc SendToMenu.cc
  * Fixed #960535 aka Deiconify with apps set 'sticky' (Mathias)
    FbCommands.cc
  * Fixed #1020399 aka broken ShowDesktop - command (Mathias)
    WorkspaceCmd.cc
*05/04/22:
  * clear maximized-Flags of a resized/moved Window (Mathias)
    Window.cc
  * fixed Iconified+Sticky Windows not shown in Iconbar (Mathias)
    (when in WorkspaceIcons-Mode
    IconbarTool.cc
*05/04/21:
  * Fixed iconv-issues on *BSD/MacOSX (Mathias)
    configure.in
  * Fixed #1133809, ArrangeWindows covers Toolbar/Slit (Mathias)
    WorkspaceCmd.cc
*05/04/20:
  * Fixed problem with _NET_WM_STRUT (Mathias)