@@ -1,5 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.13
+*05/04/27:
+  * Fix drawing when transparency off (Simon)
+    FbWindow.cc
 *05/04/26:
   * Fix systray icon sizing (send a configurenotify on resize) (Simon)
     SystemTray.cc WinClient.hh/cc FbTk/FbWindow.hh/cc Window.cc
